@@ -6,8 +6,10 @@ public class cpu001decoder implements Decoder {
 	
 	static OpCodes nop = OpCodes.NOP;
 	public machineState decode(byte instruction) throws illegalOpCodeException {
-
-		machineState m = DecoderMap.getMap().get(new Integer((int) (instruction & 0x00ff)));
+		int i = (instruction & 0x00ff);
+		Integer in;
+		in = Integer.valueOf(i);
+		machineState m = DecoderMap.getMap().get(in);
 
 		if (null == m) {
 			throw new illegalOpCodeException();
